hello-chart/templates/hello-impl.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-impl
  labels:
    app: hello-impl
    app.kubernetes.io/name: hello-impl
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: remoting
      port: 2552
      targetPort: 2552
    - name: management
      port: 8558
      targetPort: 8558
  selector:
    app: hello-impl
